# nix_sample

./: README.md  flake.nix
classic_nix/simplist/: default.nix  simplist.cabal
classic_nix/simplist/app/: Main.hs
classic_nix/simplist_libfoo/: LICENSE  default.nix  shell.nix
classic_nix/simplist_zlib/: default.nix  simplist.cabal
simplist/: default.nix  result
simplist/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
simplist_libfoo/: CHANGELOG.md  result  simplist-libfoo.cabal
simplist_libfoo/app/: Main.hs
simplist_libfoo/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
simplist_libfoo/libfoo/: Makefile  foo.c  libfoo.nix
simplist_zlib/: CHANGELOG.md  result  simplist-zlib.cabal  simplist_zlib.cabal
simplist_zlib/app/: Main.hs
simplist_zlib/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
