cabal-version:      3.0
name:               simplist-libfoo
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             lionhairdino
maintainer:         lionhairdino@gmail.com
build-type:         Simple

common warnings
    ghc-options: -Wall

executable simplist-libfoo
    main-is:            Main.hs
    build-depends:      base >=4.18.0.0
    hs-source-dirs:     app
    default-language:   Haskell2010
    pkgconfig-depends:  foo
    extra-libraries:    foo

