cabal-version:      3.0
name:               simplist-zlib
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             lionhairdino
maintainer:         lionhairdino@gmail.com
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md
common warnings
    ghc-options: -Wall

executable simplist
    import:           warnings
    main-is:          Main.hs
    build-depends:    base >=4.18.0.0
    extra-libraries:  z
    hs-source-dirs:   app
    default-language: Haskell2010
